# bielefeldGEOCLIENT

./: .buildinfo  .dockerignore  .gitignore  .releaserc.json  AUTHORS.txt  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  administration.html  alembic.ini  app.html  default-config.html  entrypoint.sh  example-config.html  genindex.html  gunicorn.conf  index.html  javascript-plugins.html  layer.html  layers-config.html  objects.inv  package-lock.json  package.json  print-index.html  pyproject.toml  search.html  searchindex.js  selectionlists-config.html  setup.cfg  setup.py  tour.html  url-parameter.html  webpack.config.js
1.0.0/: administration.html  app.html  default-config.html  example-config.html  genindex.html  index.html  javascript-plugins.html  layer.html  layers-config.html  print-index.html  search.html  selectionlists-config.html  tour.html  url-parameter.html
1.0.1/: .buildinfo  default-config.html  index.html  javascript-plugins.html  layer.html  layers-config.html  search.html  selectionlists-config.html  tour.html
1.10.0/: .buildinfo  app.html  default-config.html  index.html  print-index.html  search.html  selectionlists-config.html  tour.html
1.11.0/: .buildinfo  administration.html  example-config.html  genindex.html  index.html  javascript-plugins.html  layer.html  layers-config.html  selectionlists-config.html  url-parameter.html
1.15.12/: .buildinfo  administration.html  app.html  default-config.html  example-config.html  genindex.html  javascript-plugins.html  layer.html  layers-config.html  print-index.html  selectionlists-config.html
1.2.0/: .buildinfo  app.html  default-config.html  genindex.html  index.html  layer.html  layers-config.html  url-parameter.html
1.2.1/: genindex.html  layer.html  layers-config.html  selectionlists-config.html  url-parameter.html
1.2.2/: administration.html  app.html  default-config.html  genindex.html  index.html  layer.html  layers-config.html  search.html  tour.html
1.2.3/: .buildinfo  administration.html  app.html  default-config.html  example-config.html  index.html  layer.html  layers-config.html  search.html  tour.html  url-parameter.html
1.3.0/: app.html  genindex.html  layer.html  layers-config.html  print-index.html  selectionlists-config.html  tour.html  url-parameter.html
1.3.1/: .buildinfo  administration.html  example-config.html  genindex.html  index.html  print-index.html  searchindex.js  selectionlists-config.html  tour.html  url-parameter.html
1.4.0/: .buildinfo  app.html  default-config.html  example-config.html  genindex.html  index.html  layer.html  layers-config.html  print-index.html  selectionlists-config.html
1.4.1/: administration.html  example-config.html  index.html  javascript-plugins.html  layers-config.html  print-index.html  search.html  tour.html  url-parameter.html
munimap_transport/: MANIFEST.in  pyproject.toml  setup.py
munimap_transport/munimap_transport/: queries.py
munimap_transport/munimap_transport/frontend/js/: app.js  layers.js  transport-controller.js
munimap_transport/munimap_transport/static/js/: app.js  layers.js  timetable-controller.js  transport-api-service.js  transport-controller.js
munimap_transport/munimap_transport/templates/transport/app/: index.html  map.html  sidebar.html  timetable.html
munimap_transport/munimap_transport/templates/transport/app/ng-templates/: sidebar-header.html  station-properties.html
munimap_transport/munimap_transport/views/: transport.py
(+737 files in other folders)
