[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'munimap'
version = "1.12.0"
maintainers = [
    { name = 'terrestris GmbH & Co. KG', email = 'info@terrestris.de' }
]
description = 'Municipality map with street index, search grid, etc.'
dependencies = [
    'alembic==1.16.5',
    'Babel==2.16.0',
    'bcrypt==3.2.2',
    'blinker==1.8.2',
    'dictspec==0.2.1',
    'Flask-Babel==1.0.0',
    'Flask-Login==0.6.3',
    'flask-mailman==0.1.5',
    'Flask-SQLAlchemy==2.5.1',
    'Flask-WTF==1.2.0',
    'Flask==2.3.3',
    'GeoAlchemy2==0.15.2',
    'natsort==8.4.0',
    'psycopg2==2.9.9',
    'pyphen==0.9.2',
    'pytz==2024.2',
    'PyYAML==6.0.2',
    'reportlab==3.6.13',
    'requests==2.32.5',
    'Rtree==1.3.0',
    'Shapely==2.0.7',
    'speaklater3==1.4',
    'SQLAlchemy==1.4.54',
    'WTForms-SQLAlchemy==0.3',
    'WTForms==2.3.3'
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9"
]
