[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'munimap'
version = "1.13.0"
maintainers = [
    { name = 'terrestris GmbH & Co. KG', email = 'info@terrestris.de' }
]
description = 'Municipality map with street index, search grid, etc.'
dependencies = [
    'alembic==1.16.5',
    'Babel==2.16.0',
    'bcrypt==3.2.2',
    'dictspec==0.2.1',
    'Flask-Babel==1.0.0',
    'Flask-Login==0.6.3',
    'flask-mailman==1.1.1',
    'Flask-SQLAlchemy==3.1.1',
    'Flask-WTF==1.2.2',
    'Flask==3.1.2',
    'GeoAlchemy2==0.15.2',
    'natsort==8.4.0',
    'psycopg2==2.9.11',
    'pyphen==0.9.2',
    'PyYAML==6.0.2',
    'reportlab==3.6.13',
    'requests==2.32.5',
    'Rtree==1.3.0',
    'Shapely==2.1.2',
    'speaklater3==1.4',
    'SQLAlchemy==2.0.44',
    'WTForms-SQLAlchemy==0.3',
    'WTForms==2.3.3'
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12"
]
