[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'munimap'
version = "1.15.5"
maintainers = [
    { name = 'terrestris GmbH & Co. KG', email = 'info@terrestris.de' }
]
description = 'Municipality map with street index, search grid, etc.'
dependencies = [
    'alembic==1.17.2',
    'Babel==2.17.0',
    'bcrypt==3.2.2',
    'dictspec==0.2.1',
    'Flask-Babel==1.0.0',
    'Flask-Login==0.6.3',
    'flask-mailman==1.1.1',
    'Flask-SQLAlchemy==3.1.1',
    'Flask-WTF==1.2.2',
    'Flask==3.1.2',
    'GeoAlchemy2==0.15.2',
    'natsort==8.4.0',
    'psycopg2==2.9.11',
    'pyphen==0.9.2',
    'PyYAML==6.0.3',
    'reportlab==4.4.9',
    'requests==2.32.5',
    'Rtree==1.3.0',
    'Shapely==2.1.2',
    'speaklater3==1.4',
    'SQLAlchemy==2.0.44',
    'WTForms-SQLAlchemy==0.4.2',
    'WTForms==3.2.1'
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12"
]
